[package]
name = "milligrep"
version = "1.0.3"
authors = ["Jayesh Mann <jayeshmann06@gmail.com>"]
edition = "2021"
description = "Custom simplified implementation of grep"
documentation = "https://docs.rs/milligrep"
homepage = "https://github.com/jayeshmann/milligrep"
repository = "https://github.com/jayeshmann/milligrep"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
